crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__tab-after-operator_E22.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E224 [*] Tab after operator
  --> E22.py:48:5
   |
47 | #: E224
48 | a +=    1
   |     ^^^^
49 | b += 1000
50 | #:
   |
help: Replace with single space
   |
47 | #: E224
   - a +=	1
48 + a += 1
49 | b += 1000
   |
