crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__tab-before-keyword_E27.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E274 [*] Tab before keyword
  --> E27.py:13:5
   |
11 | True and        False
12 | #: E273 E274
13 | True        and    False
   |     ^^^^^^^^
14 | #: E271
15 | a and  b
   |
help: Replace with single space
   |
12 | #: E273 E274
   - True		and	False
13 + True and	False
14 | #: E271
   |

E274 [*] Tab before keyword
  --> E27.py:29:2
   |
27 | a and    b
28 | #: E274
29 | a        and b
   |  ^^^^^^^^
30 | #: E273 E274
31 | this        and    False
   |
help: Replace with single space
   |
28 | #: E274
   - a		and b
29 + a and b
30 | #: E273 E274
   |

E274 [*] Tab before keyword
  --> E27.py:31:5
   |
29 | a        and b
30 | #: E273 E274
31 | this        and    False
   |     ^^^^^^^^
32 | #: Okay
33 | from u import (a, b)
   |
help: Replace with single space
   |
30 | #: E273 E274
   - this		and	False
31 + this and	False
32 | #: Okay
   |
