crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__too-few-spaces-before-inline-comment_E26.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E261 [*] Insert at least two spaces before an inline comment
 --> E26.py:2:5
  |
1 | #: E261:1:5
2 | pass # an inline comment
  |     ^
3 | #: E262:1:12
4 | x = x + 1  #Increment x
  |
help: Insert spaces
  |
1 | #: E261:1:5
  - pass # an inline comment
2 + pass  # an inline comment
3 | #: E262:1:12
  |
