crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__too-many-blank-lines_E30.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E303 [*] Too many blank lines (2)
   --> E30.py:617:2
    |
617 |     def method2():
    |     ^^^
618 |         return 22
619 | # end
    |
help: Remove extraneous blank line(s)
    |
615 |
    -
616 | 	def method2():
    |

E303 [*] Too many blank lines (2)
   --> E30.py:644:5
    |
644 |     # arbitrary comment
    |     ^^^^^^^^^^^^^^^^^^^
645 |
646 |     def inner():  # E306 not expected (pycodestyle detects E306)
    |
help: Remove extraneous blank line(s)
    |
642 |
    -
643 |     # arbitrary comment
    |

E303 [*] Too many blank lines (2)
   --> E30.py:656:5
    |
656 |     # arbitrary comment
    |     ^^^^^^^^^^^^^^^^^^^
657 |     def inner():  # E306 not expected (pycodestyle detects E306)
658 |         pass
    |
help: Remove extraneous blank line(s)
    |
654 |
    -
655 |     # arbitrary comment
    |

E303 [*] Too many blank lines (3)
   --> E30.py:667:1
    |
667 | print()
    | ^^^^^
668 | # end
    |
help: Remove extraneous blank line(s)
    |
665 |
    -
666 | print()
    |

E303 [*] Too many blank lines (3)
   --> E30.py:676:1
    |
676 | # comment
    | ^^^^^^^^^
677 |
678 | print()
    |
help: Remove extraneous blank line(s)
    |
674 |
    -
675 | # comment
    |

E303 [*] Too many blank lines (2)
   --> E30.py:687:5
    |
687 |     # comment
    |     ^^^^^^^^^
help: Remove extraneous blank line(s)
    |
685 |
    -
686 |     # comment
    |

E303 [*] Too many blank lines (2)
   --> E30.py:690:5
    |
690 |     # another comment
    |     ^^^^^^^^^^^^^^^^^
691 |
692 |     print()
    |
help: Remove extraneous blank line(s)
    |
688 |
    -
689 |     # another comment
    |

E303 [*] Too many blank lines (3)
   --> E30.py:701:1
    |
701 | / """This class docstring comes on line 5.
702 | | It gives error E303: too many blank lines (3)
703 | | """
    | |___^
704 |   # end
    |
help: Remove extraneous blank line(s)
    |
699 |
    -
700 | """This class docstring comes on line 5.
    |

E303 [*] Too many blank lines (2)
   --> E30.py:713:5
    |
713 |     def b(self):
    |     ^^^
714 |         pass
715 | # end
    |
help: Remove extraneous blank line(s)
    |
711 |
    -
712 |     def b(self):
    |

E303 [*] Too many blank lines (2)
   --> E30.py:723:5
    |
723 |     a = 2
    |     ^
724 | # end
    |
help: Remove extraneous blank line(s)
    |
721 |
    -
722 |     a = 2
    |

E303 [*] Too many blank lines (2)
   --> E30.py:731:5
    |
731 |     # comment
    |     ^^^^^^^^^
help: Remove extraneous blank line(s)
    |
729 |
    -
730 |     # comment
    |

E303 [*] Too many blank lines (2)
   --> E30.py:734:5
    |
734 |     # another comment
    |     ^^^^^^^^^^^^^^^^^
735 |
736 |     def test(self): pass
    |
help: Remove extraneous blank line(s)
    |
732 |
    -
733 |     # another comment
    |

E303 [*] Too many blank lines (2)
   --> E30.py:748:5
    |
748 |     def b(self):
    |     ^^^
749 |         pass
750 | # end
    |
help: Remove extraneous blank line(s)
    |
746 |
    -
747 |     def b(self):
    |

E303 [*] Too many blank lines (2)
   --> E30.py:758:5
    |
758 |     pass
    |     ^^^^
759 | # end
    |
help: Remove extraneous blank line(s)
    |
756 |
    -
757 |     pass
    |
